[package]
name = "breakfast_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
cranelift = "0.86.1"
cranelift-module = "0.86.1"
cranelift-jit = "0.86.1"